Fix banner image alignment on mobile

--- a/src/assets/content-section.scss
+++ b/src/assets/content-section.scss
@@ -6,7 +6,7 @@ section {
     min-height: 100svh;
     scroll-margin-top: 60px;
     
-    @apply flex justify-center items-center p-5 w-full scroll-smooth relative snap-start;
+    @apply flex justify-center items-center p-5 w-full scroll-smooth relative snap-start snap-always;
 
     &:last-child {
         @apply pt-16;
